prevent mobile landscape styles on tablet (#184)
adds max-device-height media query

resolves ADO-26380

--- a/apps/courses/src/app/content-player/content-player/content-player.component.scss
+++ b/apps/courses/src/app/content-player/content-player/content-player.component.scss
@@ -243,8 +243,8 @@
 //mobile landscape only
 /* Landscape */
 @media only screen
-  and (min-device-width: 320px)
   and (max-device-width: 950px)
+  and (max-device-height: 480px)
   and (-webkit-min-device-pixel-ratio: 2)
   and (orientation: landscape) {
     .lcp-container {
